@@ -1,3 +1,7 @@
+2011-05-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+	* Tag as TrigT1CaloMonitoring-00-08-04
+        * Protect DEBUG messages.
+
 2011-05-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
 	* Tag as TrigT1CaloMonitoring-00-08-03
         * JobOptions update.
